--- a/geo1/Views/MainView.xaml
+++ b/geo1/Views/MainView.xaml
@@ -1,26 +1,26 @@
 ﻿<Window x:Class="geo1.Views.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:geo1"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        d:Height="450" d:Width="800">
+        d:DesignHeight="500" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
+
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
-        
+
         <Label Grid.Row="0" Grid.Column="0" Margin="2" Content="Server" />
         <TextBox Grid.Row="0" Grid.Column="1" Margin="2" x:Name="Server" />
         <Label Grid.Row="1" Grid.Column="0" Margin="2" Content="Login" />
@@ -28,13 +28,14 @@
         <Label Grid.Row="2" Grid.Column="0" Margin="2" Content="Password" />
         <TextBox Grid.Row="2" Grid.Column="1" Margin="2" x:Name="Password" />
         <Button Grid.Row="2" Grid.Column="2" Margin="2" x:Name="Send" MinWidth="50" Content="Send" />
-        
-        <ListBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" ItemsSource="{Binding ListBoxCollection}" >
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding ListBoxItem}"/>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
+
+        <TextBox Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3" x:Name="LogTextBox"
+                 TextWrapping="NoWrap"
+                 AcceptsReturn="True"
+                 AcceptsTab="True"
+                 IsReadOnly="True"
+                 VerticalScrollBarVisibility="Auto"
+                 HorizontalScrollBarVisibility="Auto"
+                 SpellCheck.IsEnabled="False" />
     </Grid>
 </Window>
